# Archie

./: .gitignore  .gitlint  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.github/workflows/: .base-hosting.yml  claude-hosting.yml  hosting.yml  prod-hosting.yml
backend/: passenger_wsgi.py  pyproject.toml
backend/backend/: settings.py
frontend/: Dockerfile  angular.json  biome.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.gemini/: GEMINI.md
frontend/libs/ui/dialog/src/: index.ts
frontend/libs/ui/sidebar/src/: index.ts
frontend/libs/ui/slider/src/: index.ts
frontend/public/fonts/Hack-Regular/: Hack-Regular.fnt
frontend/src/: index.html  styles.css  types.d.ts
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
frontend/src/app/core/: canvas.component.ts  canvas.service.spec.ts  canvas.service.ts  cluster.store.spec.ts  cluster.store.ts  connection-pick-state.spec.ts  connection-pick-state.ts  exceptions.ts  orchestrator.service.spec.ts  orchestrator.service.ts  scenarios.ts  utils.ts
frontend/src/app/core/canvas/: canvas.component.html  canvas.component.spec.ts  canvas.component.ts  canvas.service.spec.ts  canvas.service.ts
frontend/src/app/core/simulation-popover/: simulation-popover.component.html  simulation-popover.component.spec.ts  simulation-popover.component.ts
frontend/src/app/shared/: context-menu.service.spec.ts  context-menu.service.ts  dialog.service.ts  node-factory.service.spec.ts  node-factory.service.ts
(+78 files in other folders)
